# niliBOX

./: .gitignore  CMakeLists.txt  README.md  release-notes.txt
distrib/: make-distrib-android  make-distrib-ios  make-distrib-linux  make-distrib-linux-hl  make-distrib-macos  make-distrib-windows.bat
docs/: index.html
resources/: API.md  DEVELOPMENT.md  REFERENCE.md  drivers.set  languages.set  license.txt  themes.set  usb.ids  zcompile.bat  zcompile.sh  ztranslate.bat  ztranslate.sh
resources/components/: TButton.qml  TCheck.qml  TColumn.qml  TComboBox.qml  TGraph.qml  TGrid.qml  TGroupBox.qml  TKnob.qml  TLabel.qml  TLineEdit.qml  TRow.qml  TSlider.qml  TVideoFrame.qml
resources/drivers/: DIGIMODES.rcc  DRIVERTEST.rcc  ICOM_IC-PCR100.rcc  ICOM_IC-PCR1000.rcc  ICOM_IC-PCR1500.rcc  PLAYAUDIO.rcc  RELAY.rcc  REMOTEAUDIO.rcc  RTL2832U-SDR.rcc  SDRPLAY-RSP1A.rcc  WEBCAM.rcc
resources/drivers/DIGIMODES/: client.rcc  config.rcc  dsdcc.mjs  server.rcc
resources/drivers/DIGIMODES/client/: collection.qrc  main.qml
resources/drivers/DIGIMODES/config/: collection.qrc  main.qml
resources/drivers/DIGIMODES/server/: collection.qrc  main.js
resources/drivers/DRIVERTEST/: client.rcc  config.rcc  server.rcc
resources/drivers/DRIVERTEST/client/: collection.qrc  main.qml
resources/drivers/DRIVERTEST/config/: collection.qrc  main.qml
resources/drivers/DRIVERTEST/server/: main.js
resources/drivers/ICOM_IC-PCR100/: client.rcc  config.rcc  server.rcc
resources/drivers/ICOM_IC-PCR100/client/: collection.qrc  main.qml
resources/drivers/ICOM_IC-PCR100/config/: collection.qrc  main.qml
resources/drivers/ICOM_IC-PCR100/server/: main.js
resources/drivers/ICOM_IC-PCR1000/: client.rcc  config.rcc  server.rcc
resources/drivers/ICOM_IC-PCR1000/client/: SetField.qml  collection.qrc  main.qml
resources/drivers/ICOM_IC-PCR1000/config/: collection.qrc  main.qml
resources/drivers/ICOM_IC-PCR1000/server/: collection.qrc  main.js
resources/drivers/ICOM_IC-PCR1500/: client.rcc  config.rcc  server.rcc
resources/drivers/ICOM_IC-PCR1500/client/: collection.qrc  main.qml
resources/drivers/ICOM_IC-PCR1500/config/: collection.qrc  main.qml
resources/drivers/ICOM_IC-PCR1500/server/: main.js
resources/drivers/PLAYAUDIO/: client.rcc  collection.qrc  config.rcc  server.rcc
resources/drivers/PLAYAUDIO/client/: collection.qrc  main.qml
resources/drivers/PLAYAUDIO/config/: collection.qrc  main.qml
resources/drivers/PLAYAUDIO/server/: main.js
resources/drivers/RELAY/: client.rcc  config.rcc  server.rcc
resources/drivers/RELAY/client/: collection.qrc  main.qml
resources/drivers/RELAY/config/: collection.qrc  (+1 more)
resources/drivers/REMOTEAUDIO/: client.rcc  config.rcc  server.rcc
resources/drivers/RTL2832U-SDR/: client.rcc  config.rcc  rtlsdr.mjs  server.rcc
resources/drivers/SDRPLAY-RSP1A/: client.rcc  config.rcc  sdrplay.mjs  server.rcc
resources/drivers/WEBCAM/: client.rcc  config.rcc  server.rcc
resources/languages/: de.rcc  en.rcc  es.rcc  fr.rcc  it.rcc  nl.rcc
resources/languages/_TS/: DIGIMODES_client_de.ts  DIGIMODES_client_es.ts  DIGIMODES_client_fr.ts  DIGIMODES_client_it.ts  DIGIMODES_client_nl.ts  DIGIMODES_config_de.ts  DIGIMODES_config_es.ts  DIGIMODES_config_fr.ts  DIGIMODES_config_it.ts  DIGIMODES_config_nl.ts  DRIVERTEST_client_de.ts  DRIVERTEST_client_es.ts  DRIVERTEST_client_fr.ts  DRIVERTEST_client_it.ts  DRIVERTEST_client_nl.ts  DRIVERTEST_config_es.ts  DRIVERTEST_config_it.ts  ICOM_IC-PCR1000_client_de.ts  ICOM_IC-PCR1000_client_es.ts  ICOM_IC-PCR1000_client_fr.ts  ICOM_IC-PCR1000_client_it.ts  ICOM_IC-PCR1000_client_nl.ts  ICOM_IC-PCR1000_config_de.ts  ICOM_IC-PCR1000_config_es.ts  ICOM_IC-PCR1000_config_it.ts  ICOM_IC-PCR1000_config_nl.ts  ICOM_IC-PCR100_client_de.ts  ICOM_IC-PCR100_client_es.ts  ICOM_IC-PCR100_client_fr.ts  ICOM_IC-PCR100_client_it.ts  ICOM_IC-PCR100_client_nl.ts  ICOM_IC-PCR100_config_de.ts  ICOM_IC-PCR100_config_fr.ts  ICOM_IC-PCR100_config_nl.ts  ICOM_IC-PCR1500_client_de.ts  ICOM_IC-PCR1500_client_es.ts  ICOM_IC-PCR1500_client_fr.ts  ICOM_IC-PCR1500_client_it.ts  ICOM_IC-PCR1500_client_nl.ts  ICOM_IC-PCR1500_config_de.ts  (+56 more)
resources/languages/de/: collection.qrc  trans.qm
resources/languages/en/: collection.qrc
resources/languages/es/: trans.qm
resources/languages/fr/: trans.qm
resources/languages/it/: trans.qm
resources/languages/nl/: trans.qm
resources/themes/: colors.rcc  dark.rcc  ocean.rcc  steel.rcc
resources/themes/colors/: style.set
resources/themes/dark/: collection.qrc  style.set
resources/themes/ocean/: style.set
resources/themes/steel/: collection.qrc  style.set
source/: main.cpp
source/client/: app.cpp  app.h  client.cpp  client.h  clientsession.cpp  clientsession.h  configsession.cpp  configsession.h
source/common/: address.cpp  address.h  box.cpp  box.h  common.cpp  common.h  httpsession.cpp  httpsession.h  mem.cpp  mem.h  message.cpp  message.h  session.cpp  session.h  settings.cpp  settings.h  siteinfo.cpp  siteinfo.h  socket.cpp  socket.h  upnp.cpp  upnp.h
source/components/: graph.cpp  graph.h  ioslineedit.cpp  ioslineedit.h  videoframe.cpp  videoframe.h
source/liboboe/: version.txt
source/libusb/: config.h  core.c  descriptor.c  io.c  libusb.h  libusbi.h  version.h  version.txt
source/libusb/os/: events_windows.c  events_windows.h  threads_windows.h  windows_common.c  windows_common.h  windows_usbdk.h  windows_winusb.c  windows_winusb.h
source/libusbserial/: version.txt
source/libusbserial/driver/: Ch34xSerialDriver.java  ProlificSerialDriver.java
source/server/: server.cpp  server.h  serversession.cpp  serversession.h
source/ui/: deviceconfigpanel.cpp  deviceconfigpanel.h  devicespanel.cpp  devicespanel.h  infopanel.cpp  infopanel.h  settingspanel.cpp  settingspanel.h  tbbutton.cpp  tbbutton.h  tbutton.cpp  tbutton.h  tcframe.cpp  tcframe.h  tcheck.cpp  tcheck.h  tcombobox.cpp  tcombobox.h  tframe.cpp  tframe.h  tlabel.cpp  tlabel.h  tlineedit.cpp  tlineedit.h  tlist.cpp  tlist.h  tpane.cpp  tpane.h  tpopup.cpp  tpopup.h  ttextedit.cpp  ttextedit.h  ui.cpp  ui.h
(+206 files in other folders)
